--- a/package.json
+++ b/package.json
@@ -4,16 +4,13 @@
   "private": true,
   "dependencies": {
     "chroma-js": "^1.3.4",
+    "classnames": "^2.2.5",
     "d3-scale": "^1.0.6",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-icons": "^2.2.7",
-    "react-motion": "^0.5.2",
     "react-scripts": "1.0.13",
-    "react-simple-maps": "^0.8.3",
-    "react-svg-morph-2": "^0.0.1",
-    "topojson-client": "^3.0.0",
-    "topojson-server": "^3.0.0"
+    "react-simple-maps": "^0.8.3"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
@@ -33,7 +30,6 @@
     "babel-eslint": "^7.1.1",
     "eslint-plugin-flowtype": "^2.37.0",
     "flow-bin": "^0.56.0",
-    "inquirer": "^3.3.0",
     "jsonfile": "^4.0.0",
     "node-sass-chokidar": "^0.0.3",
     "npm-run-all": "^4.1.1",
