--- a/package.json
+++ b/package.json
@@ -13,16 +13,18 @@
     "react-simple-maps": "^0.8.3"
   },
   "scripts": {
-    "build-css": "node-sass-chokidar src/ -o src/",
-    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
+    "build:css": "node-sass-chokidar src/ -o src/",
+    "watch:css":
+      "npm run build:css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "start-js": "react-scripts start",
-    "start": "npm-run-all -p watch-css start-js",
-    "build": "npm run build-css && react-scripts build",
+    "start": "npm-run-all -p watch:css start-js",
+    "build": "npm run build:css && react-scripts build",
     "test": "npm run flow && npm run lint",
     "eject": "react-scripts eject",
-    "deploy": "npm run lint && npm run build && aws s3 sync build/ s3://climate-change-responsibility",
+    "deploy":
+      "npm run lint && npm run build && aws s3 sync build/ s3://climate-change-responsibility",
     "lint": "npm run lint:js && npm run lint:scss",
-    "lint:js": "prettier",
+    "lint:js": "prettier --write \"{scripts, src}/*.js\"",
     "lint:scss": "stylelint \"**/*.scss\"",
     "flow": "flow"
   },
@@ -39,14 +41,9 @@
     "stylelint-scss": "^2.1.0"
   },
   "stylelint": {
-    "plugins": [
-      "stylelint-scss",
-      "stylelint-order"
-    ],
+    "plugins": ["stylelint-scss", "stylelint-order"],
     "rules": {
-      "at-rule-blacklist": [
-        "debug"
-      ],
+      "at-rule-blacklist": ["debug"],
       "at-rule-no-vendor-prefix": true,
       "block-no-empty": true,
       "block-opening-brace-space-before": "always",
@@ -63,9 +60,7 @@
       "declaration-colon-space-after": "always-single-line",
       "declaration-colon-space-before": "never",
       "declaration-property-value-blacklist": {
-        "/^border/": [
-          "none"
-        ]
+        "/^border/": ["none"]
       },
       "function-comma-space-after": "always-single-line",
       "function-parentheses-space-inside": "never",
@@ -84,20 +79,14 @@
       "rule-empty-line-before": [
         "always-multi-line",
         {
-          "except": [
-            "first-nested"
-          ],
-          "ignore": [
-            "after-comment"
-          ]
+          "except": ["first-nested"],
+          "ignore": ["after-comment"]
         }
       ],
       "scss/at-extend-no-missing-placeholder": true,
       "scss/at-function-pattern": "^[a-z]+([a-z0-9-]+[a-z0-9]+)?$",
       "scss/at-import-no-partial-leading-underscore": true,
-      "scss/at-import-partial-extension-blacklist": [
-        "scss"
-      ],
+      "scss/at-import-partial-extension-blacklist": ["scss"],
       "scss/at-mixin-pattern": "^[a-z]+([a-z0-9-]+[a-z0-9]+)?$",
       "scss/dollar-variable-colon-space-after": "always",
       "scss/dollar-variable-colon-space-before": "never",
@@ -107,7 +96,8 @@
       "selector-class-pattern": [
         "^[a-z0-9\\-]+$",
         {
-          "message": "Selector should be written in lowercase with hyphens (selector-class-pattern)"
+          "message":
+            "Selector should be written in lowercase with hyphens (selector-class-pattern)"
         }
       ],
       "selector-list-comma-newline-after": "always",
