Fix linting, lint

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "eject": "react-scripts eject",
     "deploy": "npm run lint && npm run build && aws s3 sync build/ s3://climate-change-responsibility",
     "lint": "npm run lint:js && npm run lint:scss",
-    "lint:js": "prettier --write \"{scripts, src}/*.js\"",
+    "lint:js": "eslint .",
+    "prettier:write": "prettier --write \"{scripts, src}/*.js\"",
     "lint:scss": "stylelint \"**/*.scss\"",
     "flow": "flow"
   },
@@ -28,12 +29,23 @@
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
+    "eslint": "^4.10.0",
+    "eslint-config-prettier": "^2.7.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-config-standard-react": "^5.0.0",
     "eslint-plugin-flowtype": "^2.37.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-prettier": "^2.3.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-react": "^7.4.0",
+    "eslint-plugin-standard": "^3.0.1",
     "flow-bin": "^0.56.0",
     "jsonfile": "^4.0.0",
     "node-sass-chokidar": "^0.0.3",
     "npm-run-all": "^4.1.1",
     "prettier": "1.7.4",
+    "prettier-eslint": "^8.2.1",
     "source-map-explorer": "^1.5.0",
     "stylelint": "^8.1.1",
     "stylelint-order": "^0.7.0",
