--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "npm run build:css && react-scripts build",
     "test": "npm run flow && npm run lint",
     "eject": "react-scripts eject",
-    "deploy": "npm run lint && npm run build && aws s3 sync build/ s3://climate-change-responsibility",
+    "deploy": "npm run lint && npm run build && aws s3 sync build/ s3://whoisresponsible.us",
     "lint": "npm run lint:js && npm run lint:scss",
     "lint:js": "eslint .",
     "prettier:write": "prettier --write \"{scripts, src}/*.js\"",
