--- a/package.json
+++ b/package.json
@@ -21,13 +21,17 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "d3-scale": "^1.0.6",
+    "next-redux-wrapper": "^1.3.4",
     "normalize.css": "^7.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-icons": "^2.2.7",
+    "react-redux": "^5.0.6",
     "react-scripts": "1.0.13",
     "react-simple-maps": "^0.8.3",
-    "react-transition-group": "^2.2.1"
+    "react-transition-group": "^2.2.1",
+    "redux": "^3.7.2",
+    "redux-tooltip": "^0.7.2"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
