--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "build": "npm run build:css && react-scripts build",
     "test": "npm run flow && npm run lint",
     "eject": "react-scripts eject",
-    "deploy": "npm run lint && npm run build && aws s3 sync build/ s3://whoisresponsible.us",
+    "deploy": "yarn build && yarn deploy:s3 && yarn deploy:cloudfront",
+    "deploy:s3": "aws s3 sync build/ s3://whoisresponsible.us --cache-control max-age=172800 --delete",
+    "deploy:cloudfront": "aws configure set preview.cloudfront true && aws cloudfront create-invalidation --distribution-id E3G1S285UTPJKJ --paths /index.html",
     "lint": "npm run lint:js && npm run lint:scss",
     "lint:js": "eslint .",
     "prettier:write": "prettier --write \"{scripts, src}/*.js\"",
@@ -26,6 +28,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-icons": "^2.2.7",
+    "react-motion": "^0.5.2",
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.13",
     "react-simple-maps": "^0.8.3",
