--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "lint:js": "eslint .",
     "prettier:write": "prettier --write \"{scripts, src}/*.js\"",
     "lint:scss": "stylelint \"**/*.scss\"",
+    "lint:scss:fix": "yarn lint:scss --fix",
     "flow": "flow"
   },
   "dependencies": {
+    "@kevinahuber/redux-tooltip": "^0.7.2",
     "classnames": "^2.2.5",
     "d3-scale": "^1.0.6",
     "next-redux-wrapper": "^1.3.4",
@@ -33,8 +35,7 @@
     "react-scripts": "1.0.13",
     "react-simple-maps": "^0.9.0",
     "react-transition-group": "^2.2.1",
-    "redux": "^3.7.2",
-    "redux-tooltip": "^0.7.2"
+    "redux": "^3.7.2"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
@@ -89,7 +90,7 @@
       "function-url-quotes": "always",
       "indentation": 2,
       "length-zero-no-unit": true,
-      "max-nesting-depth": 3,
+      "max-nesting-depth": 4,
       "media-feature-name-no-vendor-prefix": true,
       "media-feature-parentheses-space-inside": "never",
       "no-missing-end-of-source-newline": true,
