Add labels, metadata, errors, etc.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,9 @@
     "prettier/standard"
   ],
   "plugins": ["flowtype", "prettier"],
+  "globals": {
+    "$Keys": true
+  },
   "parser": "babel-eslint",
   "rules": {
     "prettier/prettier": 2,
