--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,7 @@
 {
-    "name": "",
     "icons": [
         {
-            "src": "/android-chrome-192x192.png",
+            "src": "/icons/android-chrome-192x192.png",
             "sizes": "192x192",
             "type": "image/png"
         }
