--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "react-motion": "^0.5.2",
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.13",
-    "react-simple-maps": "^0.9.0",
+    "react-simple-maps": "0.10.1",
     "react-transition-group": "^2.2.1",
     "redux": "^3.7.2"
   },
