--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "eslint-plugin-standard": "^3.0.1",
     "flow-bin": "0.60",
     "jsonfile": "^4.0.0",
-    "node-sass-chokidar": "^0.0.3",
+    "node-sass-chokidar": "1.3.4",
     "npm-run-all": "^4.1.1",
     "prettier": "1.7.4",
     "prettier-eslint": "^8.2.1",
